--- a/bootstrap-3.3.7/less/product-card-info.less
+++ b/bootstrap-3.3.7/less/product-card-info.less
@@ -95,6 +95,7 @@
 	justify-content: space-between;
 	align-items: center;
 	margin-bottom: 20px;
+	margin-top: 20px;
 	
 	.active {
 		position: relative;
@@ -118,11 +119,6 @@
 		&:hover::after {
 			width: 100%;
 		}
-	}
-
-	&__info {
-		margin-top: 20px;
-
 	}
 
 	&__button {
